--- a/docker/jupyter_notebook/WithVerdict.ipynb
+++ b/docker/jupyter_notebook/WithVerdict.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
+    "import random\n",
     "import pandas as pd\n",
     "import plotly.graph_objects as go\n",
     "import sys\n",
@@ -18,9 +19,46 @@
     "verdict.set_loglevel('error')\n",
     "v = verdict.presto('presto')\n",
     "\n",
+    "def hsv_to_rgb(h, s, v):\n",
+    "    # h = [0, 360), s = [0, 1], v = [0, 1]\n",
+    "    c = (1 - abs(2*v - 1)) * s\n",
+    "    x = c * (1 - abs((h/60)%2 - 1))\n",
+    "    m = v - c/2\n",
+    "    h_i = int(h/60)\n",
+    "    r, g, b = {\n",
+    "        0: [c, x, 0],\n",
+    "        1: [x, c, 0],\n",
+    "        2: [0, c, x],\n",
+    "        3: [0, x, c],\n",
+    "        4: [x, 0, c],\n",
+    "        5: [c, 0, x],\n",
+    "    }[h_i]\n",
+    "    r, g, b = int((r+m)*255), int((g+m)*255), int((b+m)*255)\n",
+    "    return (r, g, b)\n",
+    "\n",
+    "def rbg_to_str(rgb):\n",
+    "    r, g, b = rgb\n",
+    "    return f\"rgb({r}, {g}, {b})\"\n",
+    "\n",
+    "def gen_colors(num):\n",
+    "    h_begin = 200.0\n",
+    "    h_end = 39.0 + 360.0\n",
+    "    l_begin = 0.3\n",
+    "    l_end = 0.55\n",
+    "    hsl = []\n",
+    "    for i in range(num):\n",
+    "        h = h_begin + (h_end - h_begin)*i/float(num-1)\n",
+    "        h = h%360\n",
+    "        l = l_begin + (l_end - l_begin)*i/float(num-1)\n",
+    "        s = min(abs(h-260)/60.0*0.7+0.3, 1.0)\n",
+    "        hsl.append((h, s, l))\n",
+    "    colors = [rbg_to_str(hsv_to_rgb(a[0], a[1], a[2])) for a in hsl]\n",
+    "    return colors\n",
     "\n",
     "def new_figure():\n",
-    "    return go.FigureWidget(data=go.Bar())\n",
+    "    new_figure = go.FigureWidget(data=go.Bar())\n",
+    "    new_figure.update_layout(template='none')\n",
+    "    return new_figure\n",
     "\n",
     "def updateFigure(fig, df):\n",
     "    cols = df.columns\n",
@@ -30,6 +68,7 @@
     "    else:\n",
     "        fig.data[0].x = df.index\n",
     "        fig.data[0].y = df[cols[-1]]\n",
+    "    fig.data[0].marker.color = gen_colors(len(df.index))\n",
     "\n",
     "def sql(query):\n",
     "    fig = new_figure()\n",
@@ -62,19 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c971b40d2abe48fb8682abfd7776edbd",
+       "model_id": "7e8584f2ed3a4fcbaa016df3c217c49b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'type': 'bar', 'uid': 'bcf5d5d6-0b22-437e-9a8d-45af297b2ea0'}], 'layout': {'templ…"
+       "    'data': [{'type': 'bar', 'uid': '76ca0123-ea10-43c4-8681-cfd59fd93db2'}], 'layout': {'templ…"
       ]
      },
      "metadata": {},
