--- a/docker/jupyter_notebook/Instacart.ipynb
+++ b/docker/jupyter_notebook/Instacart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,28 +121,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# No Verdict"
+    "# 200GB Online Grocery Shopping Data (from Instacart)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# No Verdict: Number of sales by product types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1f535abb8bf4d28a51e19c7b5913163",
+       "model_id": "043f24d1352549eab51ba1919bc11f75",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'type': 'bar', 'uid': 'ed29eadb-83f7-46a7-8008-20735453bbe0'}], 'layout': {'heigh…"
+       "    'data': [{'type': 'bar', 'uid': 'eec7471e-b74d-431f-9e89-3636bb62227d'}], 'layout': {'heigh…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elapsed time: 29.394515991210938 seconds.\n"
+     ]
     }
    ],
    "source": [
@@ -154,24 +168,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# With Verdict"
+    "# With Verdict: The same query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e203af65753441e92745ee85a77f135",
+       "model_id": "cd9183a859ec4d06b8a51d8aae070b88",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'type': 'bar', 'uid': '9c85803b-50b4-41f1-87e4-4b08971d0408'}], 'layout': {'heigh…"
+       "    'data': [{'type': 'bar', 'uid': '9d54b743-d776-4fe1-815c-cb7a08b8e33c'}], 'layout': {'heigh…"
       ]
      },
      "metadata": {},
