--- a/docker/jupyter_notebook/Instacart.ipynb
+++ b/docker/jupyter_notebook/Instacart.ipynb
@@ -139,13 +139,13 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ef34eb125864e779dbc25ef29f0e18b",
+       "model_id": "c5fbf3c33d6b40f89a8f6ac547ac4602",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FigureWidget({\n",
-       "    'data': [{'type': 'bar', 'uid': '224f42bc-18c7-4d73-a49f-49882aa4cf41'}], 'layout': {'heigh…"
+       "    'data': [{'type': 'bar', 'uid': '25a94209-30d8-432d-b2af-b4b38f6ab7b7'}], 'layout': {'heigh…"
       ]
      },
      "metadata": {},
@@ -155,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "elapsed time: 47.76453232765198 seconds.\n"
+      "elapsed time: 42.42441391944885 seconds.\n"
      ]
     }
    ],
@@ -173,9 +173,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "928a44b04e904ca4b3e6a645ed7b98f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FigureWidget({\n",
+       "    'data': [{'type': 'bar', 'uid': '7e019958-e006-4d9b-8ad9-bedb0a715aec'}], 'layout': {'heigh…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sql_stream(\"\"\"select department, count(*) c from hive.instacart.order_products where add_to_car_order = 25 \n",
     "              group by department order by department\"\"\")"
